--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@
 }
 
 #circles-1{
-    height: 300px;
+ height: 300px;
     width: 300px;
     border: 2px solid;
     border-radius: 50%;
@@ -134,4 +134,68 @@
 }
 .btn{
     border: 1px solid black;
+}
+.font-10{
+    font-size: 105px;
+}
+.years-font{
+    font-size: 25px;
+}
+@media screen and (max-width: 347px) {
+   
+    .margin-left{
+        margin-left: 0px;
+    }
+    .box-container{
+        display: block;
+    }
+    #circles-2{
+        top: -208px;
+    right: -21px;
+    height: 230px;
+    width: 230px;
+    }
+    #circles-1{
+    
+    height: 230px;
+    width: 230px;
+    }
+    #circles-3 {
+        height: 35px;
+        width: 35px;
+        top: -506px;
+    right: -210px;
+
+    }
+    
+
+#circles-4 {
+    height: 20px;
+    width: 20px;
+    top: -496px;
+    right: -219px;
+}
+    
+    .font-10{
+        font-size: 50px;
+    }
+    .years-font{
+        font-size: 19px;
+    }
+    .text-head{
+        color: black;
+        font-size: 20px;
+    }
+    .text-para{
+
+        font-size: 25px;
+    }
+}
+@media screen and (max-width: 1025px) {
+    #home{
+        width: 100%;
+    }
+    .circles{
+        flex-direction: column;
+    }
 }
