--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@
 @media screen and (max-width: 1025px) {
     #home{
         width: 100%;
+        padding:0px;
     }
     .circles{
         flex-direction: column;
